# final_project_zhang_alysandra

./: .coverage  CONTRIBUTING.rst  README.md  Vignette #1.ipynb  Vignette #2.ipynb  pyproject.toml
.ipynb_checkpoints/: Vignette #1-checkpoint.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: modules.doctree  smithsonian_api_queri.doctree  smithsonian_queri.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/smithsonian_api_queri/: smithsonian_api_queri.html
docs/_build/html/_modules/smithsonian_queri/: smithsonian_queri.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt  smithsonian_queri.rst.txt
docs/_build/html/source/: modules.html  smithsonian_api_queri.html  smithsonian_queri.html
docs/source/: modules.rst  smithsonian_api_queri.rst
smithsonian_api_queri/: smithsonian_api_queri.py
smithsonian_api_queri.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
smithsonian_queri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smithsonian_api_queri.py  test_smithsonian_queri.py
