[tool.poetry]
name = "smithsonian_queri"
version = "0.1.0"
description = "Python package designed to query data from the Smithsonian Open Access API using category filters based on user input."
authors = ["Alys-217 <ajz2123@tc.columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
